# gr-tfg

./: README.md  compile  compile.save  reset
apps/: loopback.sh  test_aps.sh  test_mac.sh  test_nwk.sh  usrp.sh  usrp2.sh
docs/doxygen/: Doxyfile.in
examples/: 1_SDR_usrp.grc  2_SDR_usrp.grc  SDR.py.backup  SDR_1_usrp.py  SDR_2_usrp.py  SDR_QT.py  SDR_QT.py.back  SDR_QT.py.back2  SDR_QT_pruebas.py  SDR_loopback.grc  SDR_loopback.py  SDR_loopback.py.back  SDR_loopback.py.back2  SDR_usrp.grc  SDR_usrp.py  SDR_usrp2.py  SDR_usrp_redZB.grc  SDR_usrp_redZB.py  bastibl.grc  intercambio_mensajes.grc  intercambio_mensajes.py  nwk.grc  nwk.py  nwk2.grc  nwk2.py  nwk3.grc  nwk3.py  prueba.pcapng  sdr-QT.grc  sdr-QT2.grc  sdr.grc  testAPS.grc  testAPS.py  testMAC.grc  testMAC.py  testNWK.grc  testNWK.py  top_block.py
grc/: CMakeLists.txt  tfg_APS_stack.xml  tfg_Aplication.xml  tfg_MAC_stack.xml  tfg_NWK_stack.xml  tfg_imprimir_bytes.xml  tfg_imprimir_mensajes.xml  tfg_mac.xml  tfg_mensaje_a_mayusculas.xml  tfg_motecontrol.xml  tfg_repetidor_caracteres.xml  tfg_test_aps.xml  tfg_test_mac.xml  tfg_test_nwk.xml  tfg_translation_block.xml
include/tfg/: APS_stack.h  Aplication.h  CMakeLists.txt  MAC_stack.h  NWK_stack.h  imprimir_bytes.h  imprimir_mensajes.h  mac.h  mensaje_a_mayusculas.h  motecontrol.h  repetidor_caracteres.h  test_aps.h  test_mac.h  test_nwk.h  translation_block.h
lib/: APS_stack_impl.cc  APS_stack_impl.h  Aplication_impl.cc  Aplication_impl.h  CMakeLists.txt  MAC_stack_impl.cc  MAC_stack_impl.h  NWK_stack_impl.cc  NWK_stack_impl.h  bytes.cc  bytes.h  imprimir_bytes_impl.cc  imprimir_bytes_impl.h  imprimir_mensajes_impl.cc  imprimir_mensajes_impl.h  libAPS.cc  libAPS.h  libMAC.cc  libMAC.h  libNWK.cc  libNWK.h  mac.cc  mensaje_a_mayusculas_impl.cc  mensaje_a_mayusculas_impl.h  motecontrol_impl.cc  motecontrol_impl.h  repetidor_caracteres_impl.cc  repetidor_caracteres_impl.h  test_aps_impl.cc  test_aps_impl.h  test_mac_impl.cc  test_mac_impl.h  test_nwk_impl.cc  test_nwk_impl.h  translation_block_impl.cc  translation_block_impl.h
motas/: Makefile  TFG.h  TFGAppC.nc  TFGC.nc
python/: CMakeLists.txt  qa_APS_stack.py  qa_Aplication.py  qa_MAC_stack.py  qa_NWK_stack.py  qa_imprimir_bytes.py  qa_imprimir_mensajes.py  qa_mac.py  qa_mensaje_a_mayusculas.py  qa_motecontrol.py  qa_repetidor_caracteres.py  qa_test_aps.py  qa_test_mac.py  qa_test_nwk.py  qa_translation_block.py
swig/: tfg_swig.i
